--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
         <div class="menu-card">
           <img src="img/1.jpeg" alt="Sago Durian" class="menu-card-img">
-          <h3 class="menu-card-title">-Sago Durian-</Mango-></h3>
+          <h3 class="menu-card-title">-Sago Cocopandan-</Mango-></h3>
           <p class="menu-card-price">IDR 35K</p>
       </div>
       </div>
