--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creamy Yummy</title>
+    <title>Creamy Yummy by DQQ</title>
 
     <!--Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,7 +22,7 @@
   <body>
     <!-- Navbar Start-->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Creamy<span>Yummy</span>.</a>
+      <a href="#" class="navbar-logo">Creamy Yummy<span> by DQQ</span>.</a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
